changement du nom de page2.html

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<li>
 					</li>
 					<li>
-						<a href="contacter-la-chouette-agence.html">Contact &gt;</a>
+						<a href="contacter-la-chouette-agence.html">Contact</a>
 					</li>
 				</ul>
 			</div>
