--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="Startingwebsite/img/logo.png" class="center-block image-resize-mode logo-la-chouette-agence" width="100" alt="Logo de La chouette agence" />
+				<img src="Startingwebsite/img/logo-de-la-chouette-agence.png" class="center-block image-resize-mode logo-la-chouette-agence" width="100" alt="Logo de La chouette agence" />
 				<h1 class="text-center hero-bloc-text tc-white ">
 					La chouette agence.
 				</h1>
@@ -85,7 +85,7 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="Une explication textuelle sur les réalisation de la chouette agence" src="Startingwebsite/img/title.png" />
+				<img alt="Une explication textuelle sur les réalisation de la chouette agence" src="Startingwebsite/img/texte-sur-la-chouette-agence.png" />
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -155,12 +155,12 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="Une précision textuelle sur la chouette agence" src="Startingwebsite/img/title2.png" />
+				<img alt="Une précision textuelle sur la chouette agence" src="Startingwebsite/img/texte-sur-les-realisations-de-la-chouette-agence.png" />
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="Startingwebsite/img/1.jpg" alt="une photographie de livres" class="img-responsive portfolio-thumb" /></a>
+				<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="Startingwebsite/img/des-livres.jpg" alt="une photographie de livres" class="img-responsive portfolio-thumb" /></a>
 				<h3 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
 				</h3>
@@ -169,7 +169,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="Startingwebsite/img/2.jpg" class="img-responsive portfolio-thumb" alt="une photographe" /></a>
+				<a href="#" data-lightbox="img/une-photographe.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="Startingwebsite/img/une-photographe.jpg" class="img-responsive portfolio-thumb" alt="une photographe" /></a>
 				<h3 class="mg-md text-center">
 					Création d'un site web pour photographes
 				</h3>
@@ -180,7 +180,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/3.jpeg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="Startingwebsite/img/3.jpeg" class="img-responsive portfolio-thumb" alt="une collection d'appareil photo"/></a>
+				<a href="#" data-lightbox="img/appareils-photo.jpeg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="Startingwebsite/img/appareils-photo.jpeg" class="img-responsive portfolio-thumb" alt="une collection d'appareil photo"/></a>
 				<h3 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
 				</h3>
@@ -189,7 +189,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/4.jpeg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="Startingwebsite/img/4.jpeg" class="img-responsive portfolio-thumb" alt="Un bureau de travail" /></a>
+				<a href="#" data-lightbox="img/bureau-de-travail.jpeg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="Startingwebsite/img/bureau-de-travail.jpeg" class="img-responsive portfolio-thumb" alt="Un bureau de travail" /></a>
 				<h3 class="mg-md text-center">
 					Conception d'un site pour une agence de mariage
 				</h3>
