--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8">
 	<!-- <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">-->
 	
-    <meta name="description" content="La chouette agence c'est votre agence entreprise webdesign à Lyon. Nous sommes des Professionnels du web, passionnés et engagés pour délivrer au client le produit web de leurs rêves">
+    <meta name="description" content="La chouette agence 
+	c'est votre agence entreprise webdesign à Lyon. Nous 
+	sommes des Professionnels du web, passionnés et engagés
+	 pour délivrer au client le produit web de leurs rêves">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
@@ -218,7 +221,7 @@
 <!-- bloc-5-cta END -->
 
 <!-- Footer - bloc-8 -->
-<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
@@ -252,7 +255,7 @@
 			</div>
 		</div>
 	</div>
-</div>
+</footer>
 <!-- Footer - bloc-8 END -->
 
 </div>
