--- a/contacter-la-chouette-agence.html
+++ b/contacter-la-chouette-agence.html
@@ -67,7 +67,7 @@
 				<h1 class="text-center hero-bloc-text tc-white">
 					Parlons web design !
 				</h1>
-				<p class="text-center mg-lg tc-white tight-width-whitespace">
+				<p class="text-center mg-lg tc-white tight-width-whitespace texte-de-contact">
 					Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
 					Parlez-nous de votre projet en complétant le formulaire ci-dessous.
 				</p>
@@ -112,7 +112,7 @@
 				</form>
 			</div>
 			<div class="col-sm-6">
-				<p>
+				<p class="contactadresse">
 					contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
 				</p>
 			</div>
