--- a/contacter-la-chouette-agence.html
+++ b/contacter-la-chouette-agence.html
@@ -31,11 +31,13 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc bgc-white l-bloc " id="bloc-0">
+<header class="bloc bgc-white l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="Startingwebsite/img/la-chouette-agence.png" alt="atlanta web design logo" height="40" /></a>
+				<a class="navbar-brand" href="index.html"><img src="Startingwebsite/img/la-chouette-agence.png" alt="atlanta web design logo" height="40" />
+				<p>la chouette agence</p>
+				</a>
 				<!--
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
@@ -45,18 +47,19 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a href="index.html">Accueil</a>
+						<a href="index.html" title="Accueil">Accueil</a>
 					</li>
 					<li>
+						<a href="index.html#bloc-2-services" title="Nos métiers">Nos métiers</a>
 					</li>
 					<li>
-						<a href="page2.html">Contact</a>
+						<a href="index.html#bloc-4-portfolio" title="Contact">Nos réalisations</a>
 					</li>
 				</ul>
 			</div>
 		</nav>
 	</div>
-</div>
+</header>
 <!-- bloc-0 END -->
 
 <!-- bloc-6 -->
