--- a/contacter-la-chouette-agence.html
+++ b/contacter-la-chouette-agence.html
@@ -35,7 +35,7 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="Startingwebsite/img/la-chouette-agence.png" alt="atlanta web design logo" height="40" />
+				<a class="navbar-brand" href="index.html"><img class="headerimage" src="Startingwebsite/img/la-chouette-agence.png" alt="atlanta web design logo" height="40" />
 					
 				</a>
 				<!--
