--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	sommes des Professionnels du web, passionnés et engagés
 	 pour délivrer au client le produit web de leurs rêves">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <link rel="shortcut icon" type="image/png" href="favicon.jpg">
+    <link rel="shortcut icon" type="image/png" href="Startingwebsite/favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="Startingwebsite/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="Startingwebsite/style.css">
