ajustement des menu navbar

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 		<nav class="navbar row">
 			<div class="navbar-header">
 				<!--<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>-->
-				<a class="navbar-brand" href="index.html"><img src="Startingwebsite/img/la-chouette-agence.png" alt="Titre et logo de la chouette agence" height="40" /></a>
+				<a class="navbar-brand" href="index.html"><img class="headerindeximg" src="Startingwebsite/img/la-chouette-agence.png" alt="Titre et logo de la chouette agence" height="40" /></a>
 				<!--<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div> -->
-				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1" aria-label="close">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
 			</div>
@@ -71,9 +71,9 @@
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
 				<img src="Startingwebsite/img/logo-de-la-chouette-agence.png" class="center-block image-resize-mode logo-la-chouette-agence" width="100" alt="Logo de La chouette agence" />
-				<h1 class="text-center hero-bloc-text tc-white ">
+				<h2 class="text-center hero-bloc-text tc-white ">
 					La chouette agence.
-				</h1>
+				</h2>
 				<div class="text-center">
 					<a href="contacter-la-chouette-agence.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 				</div>
@@ -88,7 +88,9 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="Une explication textuelle sur les réalisation de la chouette agence" src="Startingwebsite/img/texte-sur-la-chouette-agence.png" />
+				<h2 class="citation">La chouette agence est une agence de web design qui aide les entreprises à devenir attractives
+					et visibles sur Internet</h2>
+
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -103,7 +105,7 @@
 					Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
 				</p>
 			</div>
-			<div class="col-sm-4">
+			<article class="col-sm-4">
 				<div class="text-center">
 					<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 				</div>
@@ -113,8 +115,8 @@
 				<p class="text-center ">
 					Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
 				</p>
-			</div>
-			<div class="col-sm-4">
+			</article>
+			<article class="col-sm-4">
 				<div class="text-center">
 					<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 				</div>
@@ -124,12 +126,18 @@
 				<p class="text-center ">
 					Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.
 				</p>
-			</div>
+			</article>
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img alt="Un avis d'un.e client.e de la chouette agence" src="Startingwebsite/img/citation.png" />
-
+				<h2 class="citation"><em>"La chouette agence est une excellente agence web !
+					Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à
+					notre site.
+					Cela nous a aidé à doubler nos ventes en ligne à Lyon"</em>
+				</h2>
+				<p class="citation">
+					Maxime Guibard, PDG de à nos Fourchettes
+				</p>
 			</div>
 		</div>
 	</div>
@@ -158,11 +166,11 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="Une précision textuelle sur la chouette agence" src="Startingwebsite/img/texte-sur-les-realisations-de-la-chouette-agence.png" />
+				<h2 class="citation">Nous travaillons avec beaucoup de clients, <br> voici quelques-une de nos réalisations</h2>
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
-			<div class="col-sm-6">
+			<article class="col-sm-6">
 				<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="Startingwebsite/img/des-livres.jpg" alt="une photographie de livres" class="img-responsive portfolio-thumb" /></a>
 				<h3 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
@@ -170,8 +178,8 @@
 				<p class="text-center">
 					Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
 				</p>
-			</div>
-			<div class="col-sm-6">
+			</article>
+			<article class="col-sm-6">
 				<a href="#" data-lightbox="img/une-photographe.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="Startingwebsite/img/une-photographe.jpg" class="img-responsive portfolio-thumb" alt="une photographe" /></a>
 				<h3 class="mg-md text-center">
 					Création d'un site web pour photographes
@@ -179,10 +187,10 @@
 				<p class="text-center">
 					Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
 				</p>
-			</div>
+			</article>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
-			<div class="col-sm-6">
+			<article class="col-sm-6">
 				<a href="#" data-lightbox="img/appareils-photo.jpeg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="Startingwebsite/img/appareils-photo.jpeg" class="img-responsive portfolio-thumb" alt="une collection d'appareil photo"/></a>
 				<h3 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
@@ -190,8 +198,8 @@
 				<p class="text-center">
 					Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les articles de ce voyageur.
 				</p>
-			</div>
-			<div class="col-sm-6">
+			</article>
+			<article class="col-sm-6">
 				<a href="#" data-lightbox="img/bureau-de-travail.jpeg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="Startingwebsite/img/bureau-de-travail.jpeg" class="img-responsive portfolio-thumb" alt="Un bureau de travail" /></a>
 				<h3 class="mg-md text-center">
 					Conception d'un site pour une agence de mariage
@@ -199,7 +207,7 @@
 				<p class="text-center">
 					Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.
 				</p>
-			</div>
+			</article>
 		</div>
 	</div>
 </section>
@@ -231,22 +239,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="https://twitter.com/?lang=en"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="https://www.facebook.com/"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="ihttps://dribbble.com/"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="https://www.instagram.com/"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
 					<!--<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div> -->
