--- a/contacter-la-chouette-agence.html
+++ b/contacter-la-chouette-agence.html
@@ -87,11 +87,11 @@
 <!-- bloc-6 END -->
 
 <!-- bloc-7 -->
-<section class="bloc bgc-white l-bloc" id="bloc-7">
+<div class="bloc bgc-white l-bloc" id="bloc-7">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-6">
-				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+				<form id="form_1">
 					<div class="form-group">
 						<label>
 							Nom
@@ -127,7 +127,7 @@
 			</div>
 		</div>
 	</div>
-</section>
+</div>
 <!-- bloc-7 END -->
 
 <!-- ScrollToTop Button -->
