--- a/contacter-la-chouette-agence.html
+++ b/contacter-la-chouette-agence.html
@@ -100,24 +100,24 @@
 						<label>
 							Nom
 						</label>
-						<input id="name" class="form-control" required />
+						<input type="text" placeholder="Indiquez votre nom et prénom" id="name" class="form-control" required />
 					</div>
 					<div class="form-group">
 						<label>
 							Adresse email
 						</label>
-						<input id="email" class="form-control" type="email" required />
+						<input type="email" placeholder="Entre une adresse email valide" id="email" class="form-control" type="email" required />
 					</div>
 					<div class="form-group">
 						<label>
 							Comment nous avez-vous connu ?
 						</label>
-						<input class="form-control" type="email" required id="input_504" />
+						<input class="form-control" type="text" placeholder="Dites nous comment vous nous avez connu" required id="input_504" />
 					</div>
 					<div class="form-group">
-						<label>
+						<label for="message">
 							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
-						</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+						</label><textarea id="message" class="form-control" rows="4" cols="50" required placeholder="Entrez votre message"> </textarea>
 					</div> 
 					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 						Envoyer
