--- a/contacter-la-chouette-agence.html
+++ b/contacter-la-chouette-agence.html
@@ -97,19 +97,19 @@
 			<div class="col-sm-6">
 				<form id="form_1">
 					<div class="form-group">
-						<label>
+						<label for="name">
 							Nom
 						</label>
 						<input type="text" placeholder="Indiquez votre nom et prénom" id="name" class="form-control" required />
 					</div>
 					<div class="form-group">
-						<label>
+						<label for="email">
 							Adresse email
 						</label>
 						<input type="email" placeholder="Entre une adresse email valide" id="email" class="form-control" type="email" required />
 					</div>
 					<div class="form-group">
-						<label>
+						<label for="form-group">
 							Comment nous avez-vous connu ?
 						</label>
 						<input class="form-control" type="text" placeholder="Dites nous comment vous nous avez connu" required id="input_504" />
