--- a/contacter-la-chouette-agence.html
+++ b/contacter-la-chouette-agence.html
@@ -109,7 +109,7 @@
 						<input type="email" placeholder="Entre une adresse email valide" id="email" class="form-control" type="email" required />
 					</div>
 					<div class="form-group">
-						<label for="form-group">
+						<label for="input_504">
 							Comment nous avez-vous connu ?
 						</label>
 						<input class="form-control" type="text" placeholder="Dites nous comment vous nous avez connu" required id="input_504" />
