--- a/contacter-la-chouette-agence.html
+++ b/contacter-la-chouette-agence.html
@@ -135,7 +135,8 @@
 <!-- bloc-7 END -->
 
 <!-- ScrollToTop Button -->
-<a class="bloc-button btn btn-d scrollToTop showScrollTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+<a class="bloc-button btn btn-d scrollToTop showScrollTop" onclick="scrollToTarget('1')">
+	<span class="fa fa-chevron-up"></span></a>
 <!-- ScrollToTop Button END-->
 
 
