--- a/index.html
+++ b/index.html
@@ -16,15 +16,24 @@
 	<link rel="stylesheet" type="text/css" href="Startingwebsite/css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="Startingwebsite/css/et-line.css">
 	
-    
-	<script defer src="./js/jquery-2.1.0.js"></script>
-	<script defer src="./js/bootstrap.js"></script>
-	<script defer src="./js/blocs.js"></script>
-	<script defer src="./js/jquery.touchSwipe.js" defer></script>
-	<script defer src="./js/gmaps.js"></script>
+    <!-- script inutiles
+		<script defer src="./js/jquery-2.1.0.js"></script>
+		<script defer src="./js/bootstrap.js"></script>
+		<script defer src="./js/blocs.js"></script>
+		<script defer src="./js/jquery.touchSwipe.js" ></script>
+		<script defer src="./js/gmaps.js"></script>
+	-->
+	
+	
+	
+	
+	
 
     <title>La chouette agence, Entreprise webdesign Lyon</title>
-
+	<!-- 
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
+ -->
     
 <!-- Analytics -->
  
