--- a/contacter-la-chouette-agence.html
+++ b/contacter-la-chouette-agence.html
@@ -13,12 +13,17 @@
 	<link rel="stylesheet" type="text/css" href="Startingwebsite/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="Startingwebsite/css/et-line.min.css">
 	
-    
-	<script defer src="./js/jquery-2.1.0.min.js"></script>
-	<script defer src="./js/bootstrap.min.js"></script>
+    <!--Scripts inutiles: 
+		<script defer src="./js/jquery-2.1.0.min.js"></script>
+		<script defer src="./js/jqBootstrapValidation.js"></script>
+		<script defer src="./js/formHandler.js"></script>
+		<script defer src="./js/bootstrap.min.js"></script>
 	<script defer src="./js/blocs.min.js"></script>
-	<script defer src="./js/jqBootstrapValidation.js"></script>
-	<script defer src="./js/formHandler.js"></script>
+	-->
+	
+	
+	
+	
     <title>Contactez votre Entreprise webdesign à Lyon</title>
 
     
