--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<article class="col-sm-6">
-				<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="Startingwebsite/img/des-livres.jpg" alt="une photographie de livres" class="img-responsive portfolio-thumb" /></a>
+				<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="Startingwebsite/img/des-livres.jpg" loading="lazy" alt="une photographie de livres" class="img-responsive portfolio-thumb" /></a>
 				<h3 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
 				</h3>
@@ -189,7 +189,7 @@
 				</p>
 			</article>
 			<article class="col-sm-6">
-				<a href="#" data-lightbox="img/une-photographe.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="Startingwebsite/img/une-photographe.jpg" class="img-responsive portfolio-thumb" alt="une photographe" /></a>
+				<a href="#" data-lightbox="img/une-photographe.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="Startingwebsite/img/une-photographe.jpg" loading="lazy" class="img-responsive portfolio-thumb" alt="une photographe" /></a>
 				<h3 class="mg-md text-center">
 					Création d'un site web pour photographes
 				</h3>
@@ -200,7 +200,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<article class="col-sm-6">
-				<a href="#" data-lightbox="img/appareils-photo.jpeg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="Startingwebsite/img/appareils-photo.jpeg" class="img-responsive portfolio-thumb" alt="une collection d'appareil photo"/></a>
+				<a href="#" data-lightbox="img/appareils-photo.jpeg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="Startingwebsite/img/appareils-photo.jpeg" loading="lazy" class="img-responsive portfolio-thumb" alt="une collection d'appareil photo"/></a>
 				<h3 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
 				</h3>
@@ -209,7 +209,7 @@
 				</p>
 			</article>
 			<article class="col-sm-6">
-				<a href="#" data-lightbox="img/bureau-de-travail.jpeg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="Startingwebsite/img/bureau-de-travail.jpeg" class="img-responsive portfolio-thumb" alt="Un bureau de travail" /></a>
+				<a href="#" data-lightbox="img/bureau-de-travail.jpeg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="Startingwebsite/img/bureau-de-travail.jpeg" loading="lazy" class="img-responsive portfolio-thumb" alt="Un bureau de travail" /></a>
 				<h3 class="mg-md text-center">
 					Conception d'un site pour une agence de mariage
 				</h3>
