rechangement vers png

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="Startingwebsite/img/logo-de-la-chouette-agence.jpg" class="center-block image-resize-mode logo-la-chouette-agence" width="100" alt="Logo de La chouette agence" />
+				<img src="Startingwebsite/img/logo-de-la-chouette-agence.png" sizes="150px" class="center-block image-resize-mode logo-la-chouette-agence" width="100" alt="Logo de La chouette agence" />
 				<h2 class="text-center hero-bloc-text tc-white ">
 					La chouette agence.
 				</h2>
