--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
 		<script defer src="./js/jquery.touchSwipe.js" ></script>
 		<script defer src="./js/gmaps.js"></script>
 	-->
-	
+	<script defer src="./js/jquery-2.1.0.min.js"></script>
+	<script defer src="./js/bootstrap.min.js"></script>
+	<script defer src="./js/blocs.min.js"></script>
+	<script defer src="./js/jquery.touchSwipe.min.js"></script>
+	<script defer src="./js/gmaps.min.js"></script>
 	
 	
 	
@@ -79,7 +83,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="Startingwebsite/img/logo-de-la-chouette-agence.png" sizes="150px" class="center-block image-resize-mode logo-la-chouette-agence" width="100" alt="Logo de La chouette agence" />
+				<img src="Startingwebsite/img/logo-de-la-chouette-agence.png" sizes="10px" class="center-block image-resize-mode logo-la-chouette-agence" width="100" alt="Logo de La chouette agence" />
 				<h2 class="text-center hero-bloc-text tc-white ">
 					La chouette agence.
 				</h2>
