--- a/contacter-la-chouette-agence.html
+++ b/contacter-la-chouette-agence.html
@@ -39,7 +39,7 @@
 <!-- bloc-0 -->
 <header class="bloc bgc-white l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
-		<nav class="navbar row">
+		<nav class="navbar row navbarcontact">
 			<div class="navbar-header">
 				<a class="navbar-brand" href="index.html"><img class="headerimage imgcontact" src="Startingwebsite/img/la-chouette-agence.png" alt="atlanta web design logo" height="40" />
 					
