--- a/index.html
+++ b/index.html
@@ -23,11 +23,7 @@
 		<script defer src="./js/jquery.touchSwipe.js" ></script>
 		<script defer src="./js/gmaps.js"></script>
 	-->
-	<script defer src="./js/jquery-2.1.0.min.js"></script>
-	<script defer src="./js/bootstrap.min.js"></script>
-	<script defer src="./js/blocs.min.js"></script>
-	<script defer src="./js/jquery.touchSwipe.min.js"></script>
-	<script defer src="./js/gmaps.min.js"></script>
+
 	
 	
 	
@@ -57,9 +53,10 @@
 				<!--<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>-->
 				<a class="navbar-brand" href="index.html"><img class="headerindeximg" src="Startingwebsite/img/la-chouette-agence.png" alt="Titre et logo de la chouette agence" height="40" /></a>
 				<!--<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div> -->
-				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1" aria-label="close">
+				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1" >
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
+				
 			</div>
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
@@ -83,7 +80,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="Startingwebsite/img/logo-de-la-chouette-agence.png" sizes="10px" class="center-block image-resize-mode logo-la-chouette-agence" width="100" alt="Logo de La chouette agence" />
+				<img src="Startingwebsite/img/logo-de-la-chouette-agence.png"  class="center-block image-resize-mode logo-la-chouette-agence" width="100" alt="Logo de La chouette agence" />
 				<h2 class="text-center hero-bloc-text tc-white ">
 					La chouette agence.
 				</h2>
