--- a/contacter-la-chouette-agence.html
+++ b/contacter-la-chouette-agence.html
@@ -13,7 +13,8 @@
 	<link rel="stylesheet" type="text/css" href="Startingwebsite/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="Startingwebsite/css/et-line.min.css">
 	
-    <!--Scripts inutiles: 
+    <!--Scripts inutiles: l'attribut defer est à rajoutter pour augmenter les performances.
+		Les scripts ci dessous n'apporte rien à notre webpage.
 		<script defer src="./js/jquery-2.1.0.min.js"></script>
 		<script defer src="./js/jqBootstrapValidation.js"></script>
 		<script defer src="./js/formHandler.js"></script>
