--- a/contacter-la-chouette-agence.html
+++ b/contacter-la-chouette-agence.html
@@ -14,13 +14,13 @@
 	<link rel="stylesheet" type="text/css" href="Startingwebsite/css/et-line.min.css">
 	
     <!--Scripts inutiles: l'attribut defer est à rajoutter pour augmenter les performances.
-		Les scripts ci dessous n'apporte rien à notre webpage.
+		Les scripts ci dessous n'apporte rien à notre webpage. -->
 		<script defer src="./js/jquery-2.1.0.min.js"></script>
 		<script defer src="./js/jqBootstrapValidation.js"></script>
 		<script defer src="./js/formHandler.js"></script>
 		<script defer src="./js/bootstrap.min.js"></script>
 	<script defer src="./js/blocs.min.js"></script>
-	-->
+	
 	
 	
 	
