--- a/contacter-la-chouette-agence.html
+++ b/contacter-la-chouette-agence.html
@@ -112,7 +112,7 @@
 						<label for="email">
 							Adresse email
 						</label>
-						<input type="email" placeholder="Entre une adresse email valide" id="email" class="form-control" type="email" required />
+						<input type="email" placeholder="Entre une adresse email valide" id="email" class="form-control" required />
 					</div>
 					<div class="form-group">
 						<label for="input_504">
