ajout aria label dans le footer

--- a/contacter-la-chouette-agence.html
+++ b/contacter-la-chouette-agence.html
@@ -148,7 +148,7 @@
 
 
 <!-- Footer - bloc-8 -->
-<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+<footer aria-label="Footer" class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 	
 	<div class="container bloc-sm">
 		<div class="row">
